<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>performance_report</name>
  <version>1.2.1</version>
  <description>Apex.AI performance_test runner, plotter, and reporter</description>
  <maintainer email="opensource@apex.ai">Apex AI, Inc.</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>performance_test</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-selenium</exec_depend>
  <exec_depend>chromium-browser</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-yaml</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
